[Android Downloads] Long-press menu item "Download Link" should delegate job to OfflinePages backend. This patch interrupts the download and hands it off to the OfflinePage backend once the mime type of the download is detected and it is text/html. Other downloads not affected.

BUG=643731

Review-Url: https://codereview.chromium.org/2528483003
Cr-Commit-Position: refs/heads/master@{#439630}

Former-commit-id: 4f6b28049376a0e309fda4cbeb6e4d7aac98965c